# ARC-AIGC-AGENT

./: .gitignore  AGENTS.md  CLAUDE.md  DEV_SPEC.md  agent_graph.mmd  docker-compose.yml  init-db.sql
backend/: celery_app.py  config.py  main.py  pyproject.toml
backend/agent/: checkpointer.py  graph.py  prompts.py  state.py  state_utils.py
backend/agent/tools/: image_analysis.py  image_evaluator.py  image_generator.py  prompt_builder.py  prompt_templates.py  search_library.py  style_lookup.py
backend/api/routes/: __init__.py  chat.py  dashboard.py  session.py  upload.py
backend/config/: dashboard.yaml.example
backend/core/image/: bailian_client.py  base.py  factory.py  generator.py  grsai_client.py  volcengine_client.py
backend/core/llm/: _base_http_client.py  bailian_client.py  base.py  client.py  factory.py  streaming.py  volcengine_client.py
backend/models/: database.py  schemas.py
backend/scripts/: test_chat_sse_flow.py
backend/services/: dashboard_service.py  message_service.py  session_service.py  storage_service.py
backend/tasks/: image_task.py
backend/tests/agent/tools/: test_image_evaluator.py
backend/tests/core/image/: test_factory.py
backend/tests/core/llm/: test_client.py  test_factory.py
backend/tests/services/: test_dashboard_service.py  test_storage_service.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/lib/: api.ts  types.ts
image-rag-mcp/: main.py  pyproject.toml
image-rag-mcp/core/embedding/: __init__.py  base.py  factory.py  volcengine_image.py  volcengine_text.py
(+6 files in other folders)
