[project]
name = "image-rag-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.29.0",
    "fastmcp>=3.2.4",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "pymilvus>=2.4.0",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.0",
]
